--- a/styling.css
+++ b/styling.css
@@ -282,9 +282,7 @@ font-family: "Apple Braille";
 
 
 .tablefield{
-    width: auto;
-    padding: 0px;
-    margin:0px;
+    width: 35%;
 }
 
 #addp{
