--- a/styling.css
+++ b/styling.css
@@ -352,5 +352,5 @@ hr{
     padding:%;
     margin-bottom: 20px;
     margin-right: 2%;
-    box-shadow: 5px 5px 5px orange;
+    circle-shadow: 5px 5px 5px orange;
 }
