Alert successful and redirect

--- a/styling.css
+++ b/styling.css
@@ -349,8 +349,8 @@ hr{
 }
 
 .reporticons{
-    padding:%;
+    padding:2%;
     margin-bottom: 20px;
     margin-right: 2%;
-    circle-shadow: 5px 5px 5px orange;
+
 }
