--- a/styling.css
+++ b/styling.css
@@ -297,6 +297,8 @@ font-family: "Apple Braille";
     text-align: center;
     word-wrap: break-word;
     border: 2px solid black;
+    padding-bottom: 5%;
+    padding-right: 5%;
 }
 
 #t2{
