--- a/styling.css
+++ b/styling.css
@@ -296,7 +296,7 @@ font-family: "Apple Braille";
 .tablefield{
     text-align: center;
     word-wrap: break-word;
-    border: 1px black;
+    border: 1px solid black;
 }
 
 #t2{
