Export to Excel

--- a/styling.css
+++ b/styling.css
@@ -298,10 +298,13 @@ font-family: "Apple Braille";
     border: 2px solid black;
 }
 
+#form3 td {
+    border: 1px solid black;
+}
+
 .tablefield {
     text-align: center;
     word-wrap: break-word;
-    border: 1px solid black;
 }
 
 #t2{
