Export to Excel

--- a/styling.css
+++ b/styling.css
@@ -298,7 +298,7 @@ font-family: "Apple Braille";
     border: 2px solid black;
 }
 
-#form3 td {
+#form3 table td {
     border: 1px solid black;
 }
 
