Export to Excel

--- a/styling.css
+++ b/styling.css
@@ -384,7 +384,8 @@ hr{
 
 #export {
     border-radius: 5px;
-    margin-left: 20%;
+    margin-left: 40%;
+    colour: green;
 }
 
 #suppliertable, #producttable {
