--- a/styling.css
+++ b/styling.css
@@ -386,7 +386,7 @@ hr{
     border-radius: 5px;
     margin-left: 73%;
     colour: white;
-    navbutton_background_color: green;
+    background-color: greenyellow;
 }
 
 #suppliertable, #producttable {
