--- a/styling.css
+++ b/styling.css
@@ -385,7 +385,7 @@ hr{
 #export {
     border-radius: 5px;
     margin-left: 73%;
-    colour: white;
+    color: white;
     background-color: green;
 }
 
