Export to Excel

--- a/styling.css
+++ b/styling.css
@@ -375,7 +375,7 @@ hr{
     margin-left: 90%;
     background-color: red;
     border-radius: 5px;
-    color: #aaaaaa;
+    color: slategrey;
     cursor: pointer;
 }
 
