--- a/styling.css
+++ b/styling.css
@@ -217,6 +217,7 @@ section{
     position: relative;
     left: 0px;
     bottom: 0px;
+    top: 100px;
     display: none;
     text-decoration: none;
     font-style: oblique;
