--- a/styling.css
+++ b/styling.css
@@ -201,8 +201,8 @@ section{
 
 #fulfiled {
     position: relative;
-    left: -200px;
-    bottom: -40px;
+    left: -100px;
+    top: -100px;
     display: none;
     text-decoration: none;
     font-style: oblique;
@@ -215,8 +215,7 @@ section{
 
 #pending {
     position: relative;
-    left: -15px;
-    bottom: 0px;
+    left: -100px;
     top: -100px;
     display: none;
     text-decoration: none;
