--- a/styling.css
+++ b/styling.css
@@ -246,8 +246,8 @@ section{
 
 #application {
     position: relative;
-    left: -250px;
-    bottom: -40px;
+    left: -85px;
+    top: -100px;
     display: none;
     text-decoration: none;
     font-style: oblique;
@@ -261,8 +261,8 @@ section{
 
 #createuser {
     position: relative;
-    left: -250px;
-    bottom: -40px;
+    left: -85px;
+    top: -100px;
     display: none;
     text-decoration: none;
     font-style: oblique;
