--- a/styling.css
+++ b/styling.css
@@ -323,6 +323,7 @@ footer{
     border-radius: 5px;
     border:solid black;
     padding: 15px;
+    clear: both;
 }
 
 #form1 ul li {
@@ -532,4 +533,8 @@ hr{
 #highlight {
     font-weight: bolder;
     font-size: 150%;
+}
+
+#intro {
+    float: right;
 }
