update stock level

--- a/styling.css
+++ b/styling.css
@@ -565,6 +565,14 @@ hr{
     text-shadow: 5px 5px 5px orange;
 }
 
-#producthelp, #customerhelp, #supplierhelp :hover {
+#producthelp :hover {
+    background-color: coral;
+}
+
+#customerhelp :hover {
+    background-color: coral;
+}
+
+#supplierhelp :hover {
     background-color: coral;
 }
