--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,27 @@
-@media (min-width: 600px){
+@media screen and (max-width: 1060px) {
+    #primary {
+        width: 67%;
+    }
 
+    #secondary {
+        width: 30%;
+        margin-left: 3%;
+    }
 }
+
+/* Tabled Portrait */
+@media screen and (max-width: 768px) {
+    #primary {
+        width: 100%;
+    }
+
+    #secondary {
+        width: 100%;
+        margin: 0;
+        border: none;
+    }
+}
+
 body{
     border: 2px solid black;
     margin: 0px auto;
