update stock level

--- a/styling.css
+++ b/styling.css
@@ -22,6 +22,17 @@
     }
 }
 
+@media (min-device-width: 600px) {
+    img[data-src-600px] {
+        content: attr(data-src-600px, url);
+    }
+}
+
+@media (min-device-width: 800px) {
+    img[data-src-800px] {
+        content: attr(data-src-800px, url);
+    }
+}
 body{
     border: 2px solid black;
     margin: 0px auto;
