--- a/assets/plugins/pace/pace-theme-big-counter.css
+++ b/assets/plugins/pace/pace-theme-big-counter.css
@@ -3,7 +3,7 @@
     ============================*/
 
 /* This is a compiled file, you should be editing the file in the templates directory */
-.pace {
+/*.pace {
     -webkit-pointer-events: none;
     pointer-events: none;
     -webkit-user-select: none;
