--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ body {
 
 /* ------------------------------- */
 
+#wrapper {
+    width: 100%;
+    margin-top: 55px !important;
+    background-color: #b12077;
+}
 
 #page-wrapper {
     padding: 0 15px;
