--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 #wrapper {
     width: 100%;
     margin-top: 55px !important;
-    background-color: #7c7472;
+    background-color: #fffbf0;
 }
 
 #page-wrapper {
