--- a/styling.css
+++ b/styling.css
@@ -576,7 +576,7 @@ hr{
 }
 
 #form4 {
-    margin-left: 50px;
+    margin-left: 20px;
     margin-right: 10%;
     font-family: Verdana, sans-serif;
     font-size: large;
@@ -590,6 +590,10 @@ hr{
     text-align: center;
     font-size: 150%;
     font-weight: bolder;
+}
+
+#form4 table {
+    margin-left: 20px;
 }
 
 #producthelp, #customerhelp, #supplierhelp, #purchaseorderhelp, #salesorderhelp {
