--- a/styling.css
+++ b/styling.css
@@ -620,3 +620,10 @@ hr{
 #salesorderhelp:hover {
     background-color: coral;
 }
+
+.reporticons {
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-right: 5%;
+}
