--- a/styling.css
+++ b/styling.css
@@ -622,7 +622,8 @@ hr{
 }
 
 .reporticons {
+    border: 2px solid black;
     border-radius: 20px;
-    margin-bottom: 20px;
-    margin-right: 5%;
+    margin-bottom: 10px;
+    margin-right: 5px;
 }
