--- a/styling.css
+++ b/styling.css
@@ -621,3 +621,9 @@ hr{
     background-color: coral;
 }
 
+.reporticons {
+    border: 2px solid black;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    margin-right: 5px;
+}
